--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -8,9 +8,10 @@
 .settings-integrations-form__body {
   width: 100%;
   max-height: 100%;
+  height: 100%;
   overflow-y: auto;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 .settings-integrations-form__field {
   padding: 36px 45px;
@@ -87,12 +88,8 @@
   border-radius: 3px;
   text-align: left;
   width: 100%;
-  &.settings-integrations-form__input_dropdown {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-  }
+  position: relative;
+
   &.settings-integrations-form__input_search {
     padding: 8px 10px 8px 42px;
     position: relative;
@@ -104,6 +101,37 @@
     background: transparent;
     border: none;
     border-radius: 0;
+  }
+}
+.settings-integrations-form__dropdown-inner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.settings-integrations-form__dropdown-list {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: calc(100% + 18px);
+  border: 1px solid var(--context-background-color);
+  background: var(--context-background-color);
+  border-radius: 3px;
+  z-index: 111;
+}
+.settings-integrations-form__dropdown-item {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  padding: 8px 15px;
+  transition: .2s ease;
+  color: var(--user-info-settings-default-svg-fill);
+  cursor: pointer;
+  &:hover {
+    background: var(--user-info-settings-hover-setting-bg);
+    color: var(--font-color);
   }
 }
 .settings-integrations-form__icon {
@@ -123,6 +151,7 @@
     -webkit-text-fill-color: transparent;
     position: relative;
     padding: 1px 0;
+    cursor: pointer;
     &:after {
       content: "";
       position: absolute;
