--- a/src/components/emoji-component/css/emoji-mart.css
+++ b/src/components/emoji-component/css/emoji-mart.css
@@ -50,7 +50,7 @@
   background-size: 5700%;
 }
 .emoji-type-image.emoji-set-apple {
-  background-image: url("https://unpkg.com/emoji-datasource-apple@6.0.1/img/apple/sheets-256/64.png");
+  background-image: url("../emojis.png");
 }
 .emoji-type-image.emoji-set-facebook {
   background-image: url("https://unpkg.com/emoji-datasource-facebook@6.0.1/img/facebook/sheets-256/64.png");
