--- a/src/components/SettingsContainer/SettingsNav/settings-nav.scss
+++ b/src/components/SettingsContainer/SettingsNav/settings-nav.scss
@@ -39,7 +39,7 @@
     }
     &:hover {
       color: var(--font-color);
-      background: var(--settings-left-bar-hover);
+      background: var(--modal-element-hover-bg-color);
       .settings-nav__icon path {
         fill: var(--user-info-settings-hover-svg-fill);
       }
@@ -66,7 +66,7 @@
     }
     &:hover {
       color: var(--font-color);
-      background: var(--settings-left-bar-hover);
+      background: var(--modal-element-hover-bg-color);
       .settings-nav__icon path {
         stroke: var(--user-info-settings-hover-svg-fill);
       }
@@ -74,7 +74,7 @@
   }
   &.router-link-exact-active, &.settings-nav__link_active {
     color: var(--font-color)!important;
-    background: var(--settings-left-bar-hover)!important;
+    background: var(--modal-element-hover-bg-color)!important;
     .settings-nav__icon path {
       fill: url(#paint0_linear)!important;
     }
@@ -102,6 +102,7 @@
 .settings-nav__dropdown {
   max-height: 500px;
   overflow: hidden;
+  background: var(--hover-folder-bg);
 }
 .max-height-transition-enter-active, .max-height-transition-leave-active {
   transition: max-height .3s ease!important;
