fix: integration bug (cancel button) fix: integration bug with cannot select Common fix: integration bug with cannot delete action fix: integration bug with validation feat: amocrm integration form feat: autoresponders data log

--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -102,6 +102,9 @@
     border: none;
     border-radius: 0;
   }
+  &.settings-integrations-form__input_error {
+    border: .7px solid var(--red-color);
+  }
 }
 .settings-integrations-form__dropdown-inner {
   width: 100%;
