--- a/src/views/registration/registration.scss
+++ b/src/views/registration/registration.scss
@@ -51,6 +51,67 @@
   line-height: 42px;
   color: var(--font-color);
 }
+
+.registration__checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-top: 24px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 17px;
+  color: var(--font-color);
+  text-align: left;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.registration__checkbox-hidden {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.registration__checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #DEDEEE;
+  border-radius: 8px;
+  border: 0.7px solid var(--modal-input-border-color);
+}
+
+.registration__checkbox input:checked ~ .registration__checkmark {
+  background: var(--green-color);
+}
+
+.registration__checkmark:after {
+  content: "";
+  position: absolute;
+  display: block;
+
+}
+
+.registration__checkbox input:checked ~ .registration__checkmark:after {
+  display: block;
+}
+
+.registration__checkbox .registration__checkmark:after {
+  left: 8px;
+  top: 4px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
 .registration__button {
   -webkit-appearance: none;
   -webkit-box-shadow: none;
