fix: fixing bugs and adding documents and videos in messages

--- a/src/components/MessagesContainer/messages-container.scss
+++ b/src/components/MessagesContainer/messages-container.scss
@@ -12,3 +12,7 @@
   max-width: 100%;
   background: var(--messages-input-wrapper-bg);
 }
+.messages-container-input__disabled{
+  color: var(--user-icon-name);
+  text-align: center;
+}
