--- a/src/views/settings/account/account.scss
+++ b/src/views/settings/account/account.scss
@@ -154,20 +154,19 @@
   }
 }
 .settings-account__action-button {
-  position: relative;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 21px;
-  display: flex;
-  align-items: center;
-  text-decoration: underline;
-  padding: 1px 0;
-  cursor: pointer;
-
-  background: var(--green-color);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    position: relative;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 21px;
+    align-items: center;
+    text-decoration: underline;
+    padding: 1px 0;
+    cursor: pointer;
+    display: block;
+    background: var(--green-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   &:after {
     content: "";
     position: absolute;
