--- a/src/components/SettingsContainer/SettingsMailings/settings-mailings-create.scss
+++ b/src/components/SettingsContainer/SettingsMailings/settings-mailings-create.scss
@@ -105,7 +105,7 @@
     width: 60%;
     @media(max-width: 1300px) {
       width: 100%;
-      min-width: 100%;
+      // min-width: 100%;
       max-width: 100%;
     }
   }
