feat/fix: New functionality of "Partners". FL-1707 fix - Review code of "Finance" FL-1818 feat - Created a page "Profit" FL-1819 feat - Created a page "Referal links" FL-1820 feat - Created a page "History payment" FL-1834 feat- Added the function of displaying all links FL-1835 feat- Added link removal function FL-1840 feat- Added link generation function

--- a/src/components/SettingsContainer/SettingsFinanse/settings-finance-createAmenities.scss
+++ b/src/components/SettingsContainer/SettingsFinanse/settings-finance-createAmenities.scss
@@ -5,7 +5,7 @@
     &_titles{
         height: 37px;
         background-color: #191933;
-        & td{
+        &-items{
             text-align: left;
             width: 80px;
             color: #9797BB;
@@ -27,7 +27,7 @@
     background: #141427;
     padding: 0px 0px 0px 20px;
     border-bottom: 2px solid #252544;
-    & td {
+    &__cell {
         text-align: left;
         color: #CFCFE4;
         font-size: 12px;
@@ -41,7 +41,7 @@
     }
     &:last-child{
         border-bottom: none ;
-        & td{
+        .settings-finance-createAmenities__cell{
             &:first-child{
                 border-bottom-left-radius: 10px;
             }
