--- a/src/views/settings/integrations/integrations.scss
+++ b/src/views/settings/integrations/integrations.scss
@@ -24,12 +24,13 @@
       color: #9797BB;
       font-size: 16px;
       line-height: 300%;
-
       a {
         color: #9797BB;
         font-size: 16px;
         line-height: 300%;
         text-decoration: none;
+        display: flex;
+        height: 100%;
       }
     }
 
