--- a/src/views/settings/settings.scss
+++ b/src/views/settings/settings.scss
@@ -2,3 +2,11 @@
   width: 100%;
   height: 100%;
 }
+.shadow{
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  height: 100%; 
+  width: 100%; 
+  background: rgba(20, 20, 39, 0.9);
+}
