--- a/src/components/SettingsContainer/SettingsPartners/settings-partners-profit-cashback.scss
+++ b/src/components/SettingsContainer/SettingsPartners/settings-partners-profit-cashback.scss
@@ -59,6 +59,7 @@
                 color: #CFCFE4;
                 width: 100%;
                 border-radius: 6px;
+                letter-spacing: 2px;
 
                 background: #1D1D35;
                 &::placeholder{
