--- a/src/views/settings/partners/links/links.scss
+++ b/src/views/settings/partners/links/links.scss
@@ -57,9 +57,10 @@
     width: 100%;
     text-align: left;
     padding-right: 40px;
+    padding-bottom: 50px;
     &_table{
         margin-left: 33px;
-        max-width: 1200px;
+        max-width: 98%;
         width: 100%;
         padding: 32px 0px 0px 32px;
         border-collapse: collapse;
@@ -106,4 +107,11 @@
         margin-left: -35px;
         font-size: 12px;
     }
+}
+
+.row-data-none{
+    color: #9797BB;
+    display: flex;
+    justify-content: center;
+    padding: 100px;
 }
