--- a/src/components/SettingsContainer/SettingsFinanse/settings-finance-pay-history.scss
+++ b/src/components/SettingsContainer/SettingsFinanse/settings-finance-pay-history.scss
@@ -7,7 +7,7 @@
     background: rgba(0, 0, 0, 0.39);
 }
 .settings-finance-payment{
-    margin: 10% auto;
+    margin: 40px auto;
     width: 520px;
     height: 650px;
     background: #252544;
