--- a/src/views/settings/partners/history/history.scss
+++ b/src/views/settings/partners/history/history.scss
@@ -1,11 +1,11 @@
 .history{
     width: 100%;
     text-align: left;
-    padding-right: 40px;
+    padding-right: 80px;
     padding-top: 40px;
     &__table{
         margin-left: 33px;
-        max-width: 1200px;
+        /* max-width: 1200px; */
         width: 100%;
         padding: 32px 0px 0px 32px;
         border-collapse: collapse;
