--- a/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
+++ b/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
@@ -3,6 +3,7 @@
   width: calc(100% - 90px - 365px);
   max-width: calc(100% - 90px - 365px);
   flex-shrink: 5;
+  left: 65px;
   @media(max-width: 1440px) {
     width: calc(calc(100% - 90px) * 0.725);
     max-width: calc(calc(100% - 90px) * 0.725);
