--- a/src/components/SettingsContainer/SettingsNav/settings-nav.scss
+++ b/src/components/SettingsContainer/SettingsNav/settings-nav.scss
@@ -1,112 +1,112 @@
-.settings-nav {
-  position: relative;
-  height: 100%;
-  background: var(--settings-nav-color);
-  width: 90px;
-  overflow: hidden;
-  transition: width .2s ease;
+// .settings-nav {
+//   position: relative;
+//   height: 100%;
+//   background: var(--settings-nav-color);
+//   width: 90px;
+//   overflow: hidden;
+//   transition: width .2s ease;
 
-  z-index: 112;
-  &:hover {
-    width: 323px;
-  }
-}
-.settings-nav__container {
-  width: 323px;
-  height: 100%;
-}
-.settings-nav__link {
-  text-align: left;
-  display: flex;
-  align-items: center;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 140%;
-  color: var(--user-info-settings-default-svg-fill);
-  text-decoration: none;
-  transition: .2s ease;
-  height: 56px;
-  .settings-nav__icon path {
-      transition: .2s ease;
-  }
-  &.settings-nav__link_default {
-    .settings-nav__icon {
-      margin: 0 45px 0 34px;
-      path {
-        fill: var(--user-info-settings-default-svg-fill);
-      }
-    }
-    &:hover {
-      color: var(--font-color);
-      background: var(--modal-element-hover-bg-color);
-      .settings-nav__icon path {
-        fill: var(--user-info-settings-hover-svg-fill);
-      }
-    }
-  }
-  &.settings-nav__link_none {
-    .settings-nav__icon {
-      margin: 0 45px 0 34px;
-      path {
-        fill: var(--user-info-settings-default-svg-fill);
-      }
-    }
-    cursor: not-allowed;
-    pointer-events: none;
-  }
-  &.settings-nav__link_header {
-    height: 78px;
-    border-bottom: 1px solid var(--separator-color);
-    .settings-nav__icon {
-      margin: 0 45px 0 41px;
-      path {
-        stroke: var(--user-info-settings-default-svg-fill);
-      }
-    }
-    &:hover {
-      color: var(--font-color);
-      background: var(--modal-element-hover-bg-color);
-      .settings-nav__icon path {
-        stroke: var(--user-info-settings-hover-svg-fill);
-      }
-    }
-  }
-  &.router-link-exact-active, &.settings-nav__link_active {
-    color: var(--font-color)!important;
-    background: var(--modal-element-hover-bg-color)!important;
-    .settings-nav__icon path {
-      fill: url(#paint0_linear)!important;
-    }
-  }
-  &.settings-nav__link_jst-between {
-    justify-content: space-between;
-  }
-}
-.settings-nav__list-container {
-  height: calc(100% - 78px);
-  position: relative;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-}
-.settings-nav__row {
-  display: flex;
-  align-items: center;
-}
-.settings-nav__list {
-  height: 100%;
-  overflow-y: auto;
-  text-align: left;
-}
-.settings-nav__dropdown {
-  max-height: 500px;
-  overflow: hidden;
-  background: var(--hover-folder-bg);
-}
-.max-height-transition-enter-active, .max-height-transition-leave-active {
-  transition: max-height .3s ease!important;
-}
-.max-height-transition-enter-from, .max-height-transition-leave-to {
-  max-height: 0!important;
-}
+//   z-index: 112;
+//   &:hover {
+//     width: 323px;
+//   }
+// }
+// .settings-nav__container {
+//   width: 323px;
+//   height: 100%;
+// }
+// .settings-nav__link {
+//   text-align: left;
+//   display: flex;
+//   align-items: center;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 140%;
+//   color: var(--user-info-settings-default-svg-fill);
+//   text-decoration: none;
+//   transition: .2s ease;
+//   height: 56px;
+//   .settings-nav__icon path {
+//       transition: .2s ease;
+//   }
+//   &.settings-nav__link_default {
+//     .settings-nav__icon {
+//       margin: 0 45px 0 34px;
+//       path {
+//         fill: var(--user-info-settings-default-svg-fill);
+//       }
+//     }
+//     &:hover {
+//       color: var(--font-color);
+//       background: var(--modal-element-hover-bg-color);
+//       .settings-nav__icon path {
+//         fill: var(--user-info-settings-hover-svg-fill);
+//       }
+//     }
+//   }
+//   &.settings-nav__link_none {
+//     .settings-nav__icon {
+//       margin: 0 45px 0 34px;
+//       path {
+//         fill: var(--user-info-settings-default-svg-fill);
+//       }
+//     }
+//     cursor: not-allowed;
+//     pointer-events: none;
+//   }
+//   &.settings-nav__link_header {
+//     height: 78px;
+//     border-bottom: 1px solid var(--separator-color);
+//     .settings-nav__icon {
+//       margin: 0 45px 0 41px;
+//       path {
+//         stroke: var(--user-info-settings-default-svg-fill);
+//       }
+//     }
+//     &:hover {
+//       color: var(--font-color);
+//       background: var(--modal-element-hover-bg-color);
+//       .settings-nav__icon path {
+//         stroke: var(--user-info-settings-hover-svg-fill);
+//       }
+//     }
+//   }
+//   &.router-link-exact-active, &.settings-nav__link_active {
+//     color: var(--font-color)!important;
+//     background: var(--modal-element-hover-bg-color)!important;
+//     .settings-nav__icon path {
+//       fill: url(#paint0_linear)!important;
+//     }
+//   }
+//   &.settings-nav__link_jst-between {
+//     justify-content: space-between;
+//   }
+// }
+// .settings-nav__list-container {
+//   height: calc(100% - 78px);
+//   position: relative;
+//   ::-webkit-scrollbar {
+//     display: none;
+//   }
+// }
+// .settings-nav__row {
+//   display: flex;
+//   align-items: center;
+// }
+// .settings-nav__list {
+//   height: 100%;
+//   overflow-y: auto;
+//   text-align: left;
+// }
+// .settings-nav__dropdown {
+//   max-height: 500px;
+//   overflow: hidden;
+//   background: var(--hover-folder-bg);
+// }
+// .max-height-transition-enter-active, .max-height-transition-leave-active {
+//   transition: max-height .3s ease!important;
+// }
+// .max-height-transition-enter-from, .max-height-transition-leave-to {
+//   max-height: 0!important;
+// }
