--- a/src/components/MessengerContent/messenger-content.scss
+++ b/src/components/MessengerContent/messenger-content.scss
@@ -5,6 +5,16 @@
   height: 100%;
   margin: 0 auto;
   background: var(--main-color);
+  &_column{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    &-dialogs{
+      display: flex;
+      height: 100%;
+    }
+  }
 }
 
 .separator{
