--- a/src/components/MessengerContent/MessangerContentHeader/messanger-content-header.scss
+++ b/src/components/MessengerContent/MessangerContentHeader/messanger-content-header.scss
@@ -21,6 +21,8 @@
         font-size: 16px;
         line-height: 140%;
         display: flex;
+        height: 100%;
+        align-items: center;
         text-align: center;
         color: var(--main-font-color);
         .swiper-button-prev{
@@ -39,7 +41,9 @@
         }
         .swiper-slide{ 
             // width: fit-content !important;
-
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .swiper-button-next::after, .swiper-button-prev::after {
             content: none;
@@ -51,16 +55,27 @@
             padding: 0 20px;
             display: flex;
             justify-content: space-between;
-            
         }
         &_no-slide{
             margin-left: 18px;
+            
         }
         &_no-slide:nth-child(1){
             margin-left: 0;
         }
         .swiper-button-disabled{
             display: none;
+        }
+        &-active {
+            width: fit-content;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid transparent;
+            border-image: var(--green-color);
+            -moz-border-image: -moz-linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
+            -webkit-border-image: -webkit-linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
+            border-image-slice: 1;
         }
     }
 }
